# scaffolder

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  dist-workspace.toml  install.sh
.github/workflows/: release.yml
src/: cli.rs  config.rs  interactive.rs  lib.rs  main.rs  postops.rs  render.rs  scaffold.rs  templates.rs
src/commands/: agent.rs  list.rs  mod.rs  new.rs  self_update.rs
templates/typescript-node/: Makefile  README.md  biome.json  eslint.config.mjs  index.bun.test.ts  index.node.test.ts  index.vitest.test.ts  lefthook.bun.yml  lefthook.yml  prettierignore  tsconfig.bun.json  tsconfig.json
tests/: cli.rs
