[package]
name = "scaffolder"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Multi-language project scaffolder (TypeScript + Node.js first)"
license = "MIT"
repository = "https://github.com/reedchan7/ts-scaffold"
readme = "README.md"

[[bin]]
name = "scaffolder"
path = "src/main.rs"

[lib]
name = "scaffolder"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
rust-embed = { version = "8.11.0", features = ["debug-embed"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
inquire = "0.9.4"
indicatif = "0.18.4"
owo-colors = "4.3.0"
anyhow = "1.0.102"
axoupdater = { version = "0.10.0", features = ["blocking"] }

[dev-dependencies]
tempfile = "3.27.0"
assert_cmd = "2.2.2"
predicates = "3.1.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
